Excluí imagens da pasta Assets com o caminho errado e adicionei-as novamente com o caminho certo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#" class="lista-menu__link">Business</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Design e UX </a>
+                    <a href="#" class="lista-menu__link">Design e UX</a>
                 </li>
             </ul>
             <img src="./assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
@@ -102,12 +102,12 @@
 
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/assets/Arquitetura.png" alt="Livro sobre acessibilidade"></div>
-                <div class="swiper-slide"><img src="/assets/Construct2.png" alt="Guia Front-end"></div>
-                <div class="swiper-slide"><img src="/assets/Gestão2.png" alt="Livro com o nome Mean"></div>
-                <div class="swiper-slide"><img src="/assets/Javascript.png" alt="Livro Sobre  MetricasAgeis"></div>
-                <div class="swiper-slide"><img src="/assets/Nodejs.png" alt="Livro sobre ReactNative"></div>
-                <div class="swiper-slide"><img src="/assets/Portugol.png" alt= livro sobre UX></div>
+                <div class="swiper-slide"><img src="/assets/Arquitetura.svg" alt="Livro sobre acessibilidade"></div>
+                <div class="swiper-slide"><img src="/assets/Construct2.svg" alt="Guia Front-end"></div>
+                <div class="swiper-slide"><img src="/assets/Gestão2.svg" alt="Livro com o nome Mean"></div>
+                <div class="swiper-slide"><img src="/assets/Javascript.svg" alt="Livro Sobre  MetricasAgeis"></div>
+                <div class="swiper-slide"><img src="/assets/Nodejs.svg" alt="Livro sobre ReactNative"></div>
+                <div class="swiper-slide"><img src="/assets/Portugol.svg" alt= livro sobre UX></div>
             </div>
 
             <!-- If we need navigation buttons -->
@@ -157,12 +157,12 @@
 
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/assets/Acessibilidade.png" alt="Livro sobre acessibilidade"></div>
-                <div class="swiper-slide"><img src="/assets/Guia Front-end.png" alt="Guia Front-end"></div>
-                <div class="swiper-slide"><img src="/assets/MEAN.png" alt="Livro com o nome Mean"></div>
-                <div class="swiper-slide"><img src="/assets/MetricasAgeis.png" alt="Livro Sobre  MetricasAgeis"></div>
-                <div class="swiper-slide"><img src="/assets/ReactNative.png" alt="Livro sobre ReactNative"></div>
-                <div class="swiper-slide"><img src="/assets/UX.png" alt="livro sobre UX"></div>
+                <div class="swiper-slide"><img src="/assets/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+                <div class="swiper-slide"><img src="/assets/Guia Front-end.svg" alt="Guia Front-end"></div>
+                <div class="swiper-slide"><img src="/assets/MEAN.svg" alt="Livro com o nome Mean"></div>
+                <div class="swiper-slide"><img src="/assets/MetricasAgeis.svg" alt="Livro Sobre  MetricasAgeis"></div>
+                <div class="swiper-slide"><img src="/assets/ReactNative.svg" alt="Livro sobre ReactNative"></div>
+                <div class="swiper-slide"><img src="/assets/UX.svg" alt="livro sobre UX"></div>
             </div>
 
             <!-- If we need navigation buttons -->
