--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="#" class="lista-menu__link">Design e UX</a>
                 </li>
             </ul>
-            <img src="./assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+            <img src="/assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
@@ -72,14 +72,14 @@
             <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"><img src="./assets/Favoritos.svg" alt="meus Favoritos"
+            <a href="#"><img src="/assets/Favoritos.svg" alt="meus Favoritos"
                     class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
-                <img src="./assets/Compras.svg" alt="carrinho de compras" class="container__imagem">
+                <img src="/assets/Compras.svg" alt="carrinho de compras" class="container__imagem">
                 <p class="container__texto">Minha sacola</p>
             </a>
             <a href="#" class="container__link">
-                <img src="./assets/Usuario.svg" alt="perfil de Usuario" class="container__imagem">
+                <img src="/assets/Usuario.svg" alt="perfil de Usuario" class="container__imagem">
                 <p class="container__texto">Meu perfil</p>
             </a>
         </div>
@@ -127,7 +127,7 @@
                     <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                 </div>
                 <!-- 2º COLUNA -->
-                <img src="./assets/Angular.svg" class="descricao__imagem">
+                <img src="/assets/Angular.svg" class="descricao__imagem">
             </div>
 
 
@@ -182,7 +182,7 @@
                         Front-end.</p>
                 </div>
 
-                <img src="./assets/Escritora.svg" class="descricao__imagem">
+                <img src="/assets/Escritora.svg" class="descricao__imagem">
             </div>
 
             <!-- 2º LINHA -->
@@ -238,12 +238,12 @@
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Educação</li>
             <li class="lista-rodapé__item">
-                <img src="./assets/CasaDoCodigo.svg" alt="logotipo casa do código">
+                <img src="/assets/CasaDoCodigo.svg" alt="logotipo casa do código">
                 <a href="#" class="lista-rodapé__link">Casa do Código</a>
             </li>
 
             <li class="lista-rodapé__item">
-                <img src="./assets/Caelum.svg" alt="logotipo Caleum">
+                <img src="/assets/Caelum.svg" alt="logotipo Caleum">
                 <a href="#" class="lista-rodapé__link">Caleum</a>
             </li>
         </ul>
@@ -251,31 +251,31 @@
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Educação Online</li>
             <li class="lista-rodapé__item">
-                <img src="./assets/Alura.svg" alt="logotipo Alura">
+                <img src="/assets/Alura.svg" alt="logotipo Alura">
                 <a href="#" class="lista-rodapé__link">Alura</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/AluraEmpresas.svg" alt="logotipo Alura Empresas">
+                <img src="/assets/AluraEmpresas.svg" alt="logotipo Alura Empresas">
                 <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/AluraLATAM.svg" alt="logotipo Alura Latam">
+                <img src="/assets/AluraLATAM.svg" alt="logotipo Alura Latam">
                 <a href="#" class="lista-rodapé__link">Alura LATAM</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/AluraStart.svg" alt="logotipo Alura Start">
+                <img src="/assets/AluraStart.svg" alt="logotipo Alura Start">
                 <a href="#" class="lista-rodapé__link">Alura Start</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/MusicDot.svg" alt="logotipo Music Dot">
+                <img src="/assets/MusicDot.svg" alt="logotipo Music Dot">
                 <a href="#" class="lista-rodapé__link">Music Dot</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/AluraLingua.svg" alt="logotipo Alura Linguas">
+                <img src="/assets/AluraLingua.svg" alt="logotipo Alura Linguas">
                 <a href="#" class="lista-rodapé__link">Alura Língua</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/PM3.svg" alt="logotipo PM3">
+                <img src="/assets/PM3.svg" alt="logotipo PM3">
                 <a href="#" class="lista-rodapé__link">PM3</a>
             </li>
         </ul>
@@ -283,31 +283,31 @@
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Comunidade</li>
             <li class="lista-rodapé__item">
-                <img src="./assets/HipstersTech.svg" alt="logotipo Hipsters Tech">
+                <img src="/assets/HipstersTech.svg" alt="logotipo Hipsters Tech">
                 <a href="#" class="lista-rodapé__link">Hipsters Ponto Tech</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/ScubaDev.svg" alt="logotipo Scuba Dev">
+                <img src="/assets/ScubaDev.svg" alt="logotipo Scuba Dev">
                 <a href="#" class="lista-rodapé__link">Scuba Dev</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/LayersTech.svg" alt="logotipo LayersTech">
+                <img src="/assets/LayersTech.svg" alt="logotipo LayersTech">
                 <a href="#" class="lista-rodapé__link">Layers Ponto Tech</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/LikeABoss.svg" alt="logotipo Like a Boss">
+                <img src="/assets/LikeABoss.svg" alt="logotipo Like a Boss">
                 <a href="#" class="lista-rodapé__link">Like a Boss</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/CarreiraSemFronteira.svg" alt="logotipo Carreira sem fronteira">
+                <img src="/assets/CarreiraSemFronteira.svg" alt="logotipo Carreira sem fronteira">
                 <a href="#" class="lista-rodapé__link">Carreira sem Fronteira</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/HipstersJobs.svg" alt="logotipo Hipsters Jobs">
+                <img src="/assets/HipstersJobs.svg" alt="logotipo Hipsters Jobs">
                 <a href="#" class="lista-rodapé__link"> Hipsters Ponto Jobs</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="./assets/GUJ.svg" alt="logotipo Guj">
+                <img src="/assets/GUJ.svg" alt="logotipo Guj">
                 <a href="#" class="lista-rodapé__link"> GUJ</a>
             </li>
         </ul>
